[tool.poetry]
name = "projeto-ml"
version = "0.1.0"
description = "Sandwich price predictor using Linear Regression"
authors = ["Marina Kally <marinakally@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
scikit-learn = "^1.7.2"
streamlit = "^1.50.0"
matplotlib = "^3.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"